added and modified test files so that the coverage is >=85 and other modifications